# usb-ram-loader

./: README.md
app/: Cargo.toml
app/examples/: ferris.rs
app/precompiled_elfs/: ferris
common/: Cargo.toml
common/src/: lib.rs
elfloader/src/: main.rs
ramloader/: Cargo.toml
ramloader/src/: main.rs
