[package]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.15"
panic-halt = "0.2.0"
nrf52840-hal = "0.14.0"
st7735-lcd = { version = "0.8.1", features = ["graphics"] }
embedded-graphics = "0.7.1"

[profile.dev]
opt-level = 's'
codegen-units = 1 
lto = true 

[profile.release]
codegen-units = 1 
lto = true 
